attempt #2 - fix font not showing in production

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,14 +7,17 @@
 @font-face {
   font-family: "NeueHaasDisplay35";
   src: url("/public/fonts/Neue-Haas-Grotesk-Display-Pro-35-ExtraLight.ttf") format("truetype");
+  font-display: swap;
 }
 @font-face {
   font-family: "NeueHaasGroteskDisplayPro45Light";
   src: url("/public/fonts/Neue-Haas-Grotesk-Display-Pro-45-Light.ttf") format("truetype");
+  font-display: swap;
 }
 @font-face {
   font-family: "Seaword2";
   src: url("/public/fonts/Seaword2.ttf") format("truetype");
+  font-display: swap;
 }
 
 html {
